  TableSelectionModel.TableModelProxy.vetoSelectionChange() added
  TableSelectionModel.TableModelProxy.getSize() renamed to getRowCount() for TableModel consistency
  FilteredTableModel extends TableSelectionModel.TableModelProxy
  DefaultTableSelectionModel uses TableModelProxy.vetoSelectionChange() to check if changes to selection should be vetoed
  AbstractFilteredTableModel.AbstractFilteredTableModelProxy removed
  ForeignKeySearchPanel constructor parameter includeToggleSearchEnabledButton added
  DefaultTableSelectionModelTest added
  EntityTestUnit.getRandomString() now returns a string of length maxLength if specified
  Configuration.SAVE_DEFAULT_USERNAME added
  UiUtil.displayInDialog() no longer available with both disposeOnEscape and closeEvent, since the latter now overrides the former
  UiUtil.chooseFileToSave() no remembers last directory used
  MethodControl now handles CancelException correctly
  DefaultExceptionHandler.unwrapException() now handles CancelException specifically
  DefaultEntityTableModel.applyColumnPreferences() bug fixed, column.setPreferredWith() now used instead of setWidth(), see javadoc
  EntityTablePanel and EntityTableSearchPanel modified to allow customizations of the latter
  Controls.toggleControl() based on a State added
  UiUtil.linkToEnabledState() modified to accept varargs
  State.StateGroup renamed to State.Group
  EventObserverImpl now uses WeakReference
  EventObserverImpl no longer uses WeakReference, forgot to think on this one
  EntityApplicationPanel.onExit() added
  EntityApplicationPanel.exit() calls the above method, allowing CancelException to propogate
  EntityApplicationPanel now generified in regard to the application model
  EntityApplicationPanel.createMenuBar() renamed to initializeMenuBar() and can be overridden
  DefaultForeignKeySearchModel no longer refreshes the combo box model on initialization
  ForeignKeySearchPanel now refreshes the underlying combo box model, if any